<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Step7</class>
 <widget class="QWidget" name="Step7">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1445</width>
    <height>965</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QStackedWidget" name="stackedWidget">
   <property name="geometry">
    <rect>
     <x>725</x>
     <y>0</y>
     <width>720</width>
     <height>480</height>
    </rect>
   </property>
   <property name="currentIndex">
    <number>0</number>
   </property>
   <widget class="QWidget" name="page"/>
   <widget class="QWidget" name="page_2"/>
  </widget>
  <widget class="QWidget" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>720</width>
     <height>480</height>
    </rect>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>210</x>
      <y>163</y>
      <width>297</width>
      <height>77</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Microsoft YaHei UI</family>
      <pointsize>9</pointsize>
      <stylestrategy>PreferAntialias</stylestrategy>
     </font>
    </property>
    <property name="text">
     <string>输入数据</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>450</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>显示</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
      <x>210</x>
      <y>240</y>
      <width>297</width>
      <height>77</height>
     </rect>
    </property>
    <property name="text">
     <string>确定单一对应关系</string>
    </property>
   </widget>
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>450</y>
      <width>69</width>
      <height>22</height>
     </rect>
    </property>
    <item>
     <property name="text">
      <string>Step1</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>Step2</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>Step3</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>Step4</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>Step5</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>Step6</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>Step7</string>
     </property>
    </item>
   </widget>
  </widget>
  <widget class="QStackedWidget" name="stackedWidget_2">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>485</y>
     <width>1445</width>
     <height>480</height>
    </rect>
   </property>
   <widget class="QWidget" name="page_3"/>
   <widget class="QWidget" name="page_4"/>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
